LPD-22758 When gradle runs module unit tests using jdk21, --add-opens and net.bytebuddy.experimental properties need to be copied from runtime jvmArgs to the new env's process config.